--- a/Synth_Sub/AvoidingLob.tex
+++ b/Synth_Sub/AvoidingLob.tex
@@ -299,7 +299,7 @@ In Hintikka's 1967 \emph{Knowledge and Belief: A logic of the two notions}, he p
 \label{sec:okrib}
 
 \section{CRAP}
-\label{sec:avoid_lob}
+\label{sec:crap}
 
 \begin{table}[H]
 \begin{center}
@@ -336,33 +336,33 @@ In Hintikka's 1967 \emph{Knowledge and Belief: A logic of the two notions}, he p
 	\end{proofenum}
 \end{proof}\mbox{}\hfill $\mathcal{QED}$
 
-%The logic defined by these axiom schemas and inference rules avoids L\"ob's Obstacle for $\Kns{i}$, as it is no longer has the positive introspection property.
-%
-%\begin{figure}[H]
-%	\begin{center}
-%		\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=3cm,
-%		thick,base node/.style={circle,draw,minimum size=35pt}]
-%		
-%		\node[base node] (w) {\begin{tabular}{c}
-%			$w:  p$ \\ $\Kns{i}p$ \\ $\tlnot\Kns{i}\Kns{i}p$
-%			\end{tabular}};
-%		\node[base node] (v) [right of=w] {\begin{tabular}{c}
-%			$v:  p$ \\ $\tlnot\Kns{i}p $
-%			\end{tabular}};
-%		\node[base node] (u) [right of=v] {$u: \tlnot p$};
-%		\path[]
-%		(w) edge node[above] {$\Rel{k}^i$} (v)
-%		edge [loop left] node {$\Rel{k}^i$} (w)
-%		(v) 
-%%		edge node[below] {} (w)
-%		%	\draw [->] (v) edge[in=5,out=355,loop] node[right] {$R$} (v)
-%		edge [<-, loop above] node {$\Rel{k}^i$} (v)
-%		edge node[above] {$\Rel{k}^i$} (u)
-%		(u)  edge [<-, loop right] node {$\Rel{k}^i$} (u);
-%		\end{tikzpicture}
-%	\end{center}
-%	\caption{A counterexample to $\Kns{i}\varphi\iimplies\Kns{i}\Kns{i}\varphi$.}
-%\end{figure}
+The logic defined by these axiom schemas and inference rules avoids L\"ob's Obstacle for $\Kns{i}$, as it is no longer has the positive introspection property.
+
+\begin{figure}[H]
+	\begin{center}
+		\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=3cm,
+		thick,base node/.style={circle,draw,minimum size=35pt}]
+		
+		\node[base node] (w) {\begin{tabular}{c}
+			$w:  p$ \\ $\Kns{i}p$ \\ $\tlnot\Kns{i}\Kns{i}p$
+			\end{tabular}};
+		\node[base node] (v) [right of=w] {\begin{tabular}{c}
+			$v:  p$ \\ $\tlnot\Kns{i}p $
+			\end{tabular}};
+		\node[base node] (u) [right of=v] {$u: \tlnot p$};
+		\path[]
+		(w) edge node[above] {$\Rel{k}^i$} (v)
+		edge [loop left] node {$\Rel{k}^i$} (w)
+		(v) 
+%		edge node[below] {} (w)
+		%	\draw [->] (v) edge[in=5,out=355,loop] node[right] {$R$} (v)
+		edge [<-, loop above] node {$\Rel{k}^i$} (v)
+		edge node[above] {$\Rel{k}^i$} (u)
+		(u)  edge [<-, loop right] node {$\Rel{k}^i$} (u);
+		\end{tikzpicture}
+	\end{center}
+	\caption{A counterexample to $\Kns{i}\varphi\iimplies\Kns{i}\Kns{i}\varphi$.}
+\end{figure}
 %
 %This logic also avoids the disaster of L\"ob's Theorem for belief, because $\Bels{i}(\Bels{i}\varphi \iimplies \varphi)$ is no longer a theorem.
 %
@@ -401,7 +401,8 @@ In Hintikka's 1967 \emph{Knowledge and Belief: A logic of the two notions}, he p
 %
 %Recall that the contrapositive of the Knowledge implies Belief axiom is $\BPoss{i}\varphi \iimplies \Poss{i}\varphi$. Our interpretation reads this as, ``$i$ considers $\varphi$ to be possible only if she has evidence that $\varphi$."  This may not be valid for how humans \emph{in fact} form beliefs, but it provides a normative dimension to the logic and some modest level of idealization. The agent's modeled by this logic are human-like, and maybe some particular humans actually abide by these axioms. We call these agents Grounded-Coherent agents, because their beliefs are grounded in evidence, and coherent because they avoid L\"ob's Obstacle.
 %
-%The belief operator narrowly avoids L\"ob's Obstacle. Doxastic logic typically includes as an axiom of Belief Consistency, which corresponds to a serial doxastic possibility relation. Crucially, this axiom $\Bels{i}\varphi\iimplies\BPoss{i}]\varphi$ is equivalent to $\tlnot(\Bels{i}\varphi \tland \Bels{i}\tlnot\varphi)$, not $\tlnot\Bels{i}(\varphi \tland \tlnot \varphi)$. The former does not run into L\"ob's Obstacle, while the latter ends in disaster.
+%The belief operator narrowly avoids L\"ob's Obstacle. 
+Doxastic logic typically includes as an axiom of Belief Consistency, which corresponds to a serial doxastic possibility relation. Crucially, this axiom $\Bels{i}\varphi\iimplies\BPoss{i}]\varphi$ is equivalent to $\tlnot(\Bels{i}\varphi \tland \Bels{i}\tlnot\varphi)$, not $\tlnot\Bels{i}(\varphi \tland \tlnot \varphi)$. The former does not run into L\"ob's Obstacle, while the latter ends in disaster.
 
 \begin{theorem}[Consistency Disaster]~\label{no_bel_cons}
 	If $\tlnot\Bels{i}(\varphi \tland \tlnot \varphi)$ and\\ $\Bels{i}(\Bels{i}\varphi \iimplies\varphi)\iimplies \Bels{i}\varphi$ are theorems, then $\Bels{i}(\varphi \tland \tlnot \varphi)$.
@@ -427,10 +428,62 @@ But of course we have the equivalence $\Bels{i}(\varphi \tland \psi) \equiv (\Be
 	This follows from Theorem \ref{no_bel_cons} and $\Bels{i}(\varphi \tland \psi) \equiv (\Bels{i}\varphi \tland \Bels{i}\psi)$.
 \end{proof}\mbox{}\hfill $\mathcal{QED}$
 
-Therefore, the logic of Grounded Coherent Agents cannot apply to humans.
+Therefore, the logic cannot apply to humans.
 %However, so long as it is merely not the case that $i$ believes $\varphi$ and that she believes $\tlnot \varphi$, we avoid disaster. It is worth exploring the cost of avoiding L\"ob's Obstacle. Does this epistemic logic still characterize something resembling a realistic logic of human-like knowledge? It still suffers from the problem of logical omniscience, for both knowledge and belief. This is unavoidable for a normal modal logic. It maintains the critical axiom that knowledge is true. 
 
 One might wonder whether it would be acceptable to abandon the Truth Axiom for knowledge and allow L\"ob's Theorem to hold for it. This would introduce more modesty to the notion of knowledge, where a human-like agent knows that her knowledge is true only for those propositions that she actually knows, but not in the general sense. What would this mean for epistemology? A false proposition would no longer imply a lack of knowledge. 
+
+\section{Avoiding L\"ob}
+\label{sec:avoiding_lob}
+
+\begin{table}[H]
+	\begin{center}
+		\begin{tabular}{| l r |}
+			\hline
+			$\Kns{i}(\varphi \iimplies \psi) \iimplies (\Kns{i}\varphi \iimplies \Kns{i}\psi)$ & Distribution of $\Kns{i}$ \\
+			$\Kns{i}\varphi \iimplies \varphi$ & Truth \\
+			$\Bels{i}(\varphi \iimplies \psi) \iimplies (\Bels{i}\varphi \iimplies \Bels{i}\psi)$ & Distribution of $\Bels{i}$\\
+%			$\Bels{i}\varphi \iimplies \BPoss{i}\varphi$ & Belief Consistency \\
+			%		$\Bels{i}\varphi \iimplies \Bels{i}\Bels{i}\varphi$ & Positive Belief Introspection \\
+			%		$\tlnot\Bels{i}\varphi \iimplies \Bels{i}\tlnot\Bels{i}\varphi$ & Negative Belief Introspection\\
+			$\Kns{i}\varphi \iimplies \Bels{i}\varphi$ & Knowledge implies Belief \\
+			$\Bels{i}\varphi \iimplies \Poss{i}\Kns{i}\varphi$ & Weak Evidential Restraint\\
+			%			$\Bels{i}\varphi \iimplies \Kns{i}\Bels{i}\varphi$ & Beliefs are Known\\
+			From $\vdash \varphi$ and $\vdash \varphi \iimplies \psi$, infer $\vdash\psi$ & Modus Ponens\\
+			From $\vdash \varphi$, infer $\vdash \Kns{i}\varphi$ & Necessitation of $\Kns{i}$\\
+			\hline
+		\end{tabular}
+		\caption{Logic of Grounded-Coherent Epistemic Agents}~\label{GC_agent}
+	\end{center}
+\end{table}
+
+
+Does this epistemic logic avoid L\"ob's Obstacle?
+\begin{figure}[H]
+	\begin{center}
+		\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=3cm,
+		thick,base node/.style={circle,draw,minimum size=35pt}]
+		
+		\node[base node] (w) {\begin{tabular}{c}
+			$w:  p$ \\ $\Bels{i}p$ \\ $\tlnot\Bels{i}\Bels{i}p$
+			\end{tabular}};
+		\node[base node] (v) [right of=w] {\begin{tabular}{c}
+			$v:  p$ \\ $\tlnot\Bels{i}p $
+			\end{tabular}};
+		\node[base node] (u) [right of=v] {$u: \tlnot p$};
+		\path[]
+		(w) edge node[above] {$\Rel{b}^i$} (v)
+		(v) 
+%		edge node[below] {} (w)
+		%	\draw [->] (v) edge[in=5,out=355,loop] node[right] {$R$} (v)
+		edge node[above] {$\Rel{b}^i$} (u);
+
+		\end{tikzpicture}
+	\end{center}
+	\caption{A counterexample to $\Bels{i}\varphi\iimplies\Bels{i}\Bels{i}\varphi$.}
+\end{figure}
+
+Without positive belief introspection, L\"ob's Theorem for belief is no longer derivable, and therefore this (very weak) epistemic logic avoids L\"ob's Obstacle.
 
 \section{Concluding Remarks}
 \label{sec:conclusion}
