wip: mechanized soundness

--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -25,6 +25,9 @@
 	 	\bibitem{coq_ref}
 	 	Barras, B.; Boutin, S.; Cornes, C.; Courant, J.; Filliatre, J.C.; Gimenez, E.; Herbelin, H.; Huet, G.; Munoz, C.; Murthy, C. and Parent, C. The Coq proof assistant reference manual: Version 6.1 (Doctoral dissertation, Inria). 1997.
 	 	
+	 	\bibitem{dewind}
+	 	De Wind, P. ``Modal logic in Coq." M.Sc. University of Amsterdam. 2001.
+	 	
 	 	\bibitem{Gettier}
 	 	Gettier, E. Is Justified True Belief Knowledge? {\em Analysis} (Vol. 23, pp. 121-123). 1963.
 	 	
@@ -117,7 +120,7 @@
 	 	\bibitem{DEL}
 	 	van Ditmarsch, H.; van der Hoek, W.; Kooi, B. {\em Dynamic Epistemic Logic}. Springer: Dordrecht, The Netherlands, 2008.
 	 	
-	 	\bibitem{RushbyMC} Bass, E.; Feigh K.; Gunter, E.; Rushby, J. Formal Modeling and Analysis for Interactive Hybrid Systems. Proceedings of the Fourth International Workshop on Formal Methods for Interactive Systems (FMIS 2011). Electronic Communications of the EASST. Vol 45 (2011).
+	 	\bibitem{RushbyMC} Bass, E.; Feigh K.; Gunter, E.; Rushby, J. Formal Modeling and Analysis for Interactive Hybrid Systems. In {\em Proceedings of the Fourth International Workshop on Formal Methods for Interactive Systems} (FMIS 2011). Electronic Communications of the EASST. Vol 45 (2011).
 	 	
 	 	\bibitem{Rushby_FormalismSafetyCases}
 	 	Rushby, J. Formalism in Safety Cases. In {\em Making Systems Safer: Proceedings of the 18th Safety-Critical Systems Symposium}; Dale, C.; Anderson, T.; Eds. Bristol UK, 2010, 3-17.
@@ -141,6 +144,7 @@
 	 	
 	 	\bibitem{puislescanne}
 	 	Lescanne, P.; Puiss\'egur, J. "Dynamic logic of common knowledge in a proof assistant." arXiv preprint arXiv:0712.3146 (2007).
+	 	
 	 	\bibitem{Aumann}
 	 	Aumann, R. "Interactive epistemology I: knowledge." International Journal of Game Theory 28.3 (1999): 263-300.
 	 	
@@ -149,6 +153,9 @@
 	 	
 	 	\bibitem{rescher}
 	 	Rescher, Nicholas. ``Epistemic Logic." University of Pittsburgh Press. 2005.
+	 	
+	 	\bibitem{sahlqvist}
+	 	Sahlqvist, Henrik. ``Completeness and Correspondence in the First and Second Order Semantics for Modal Logic." In {\em Proc. of the Third Scandinavian Logic Symposium}; Kanger, S.; Ed. Oslo, Norway, 1975, 110 - 143.
 	 	
 	 	\bibitem{simpson}
 	 	Simpson, C.; Prusak, L. ``Troubles with Information Overload = Moving from Quantity to Quality in Information Provision." International Journal of Information Management 15 (1995): 413-425.
